# Vantage

./: .gitignore  LICENSE  README.md  requirements.txt
cloud/infra/: main.tf  outputs.tf  variables.tf  versions.tf
cloud/sagemaker/: deploy_endpoint.py  inference.py
docker/: Dockerfile.robot  docker-compose.yml
docs/: architecture.md
models/: README.md  export_onnx.py
ros2_ws/src/vantage_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/vantage_perception/launch/: perception.launch.py
ros2_ws/src/vantage_perception/vantage_perception/: cloud_client.py  detection.py  edge_detector.py  hard_case_capture.py  inference_router.py  metrics.py  router_policy.py
sample_data/: README.md
scripts/: benchmark.py
